sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value getNombreValeur
  val n = getNombreValeur()
          ^